EdgeQuantum IoTJ: Ultimate micro-optimizations for Jetson Orin Nano

--- a/paper/4_Evaluation.tex
+++ b/paper/4_Evaluation.tex
@@ -7,7 +7,7 @@ We evaluate \EdgeQuantum using the same benchmark circuits as ScaleQsim~\cite{10
 
 \textbf{Hardware}: NVIDIA Jetson Orin Nano with ARM Cortex-A78AE CPU, 8GB LPDDR5 unified memory, 256GB NVMe SSD. Power consumption: 15W.
 
-\textbf{Software}: CUDA 11.4, cuQuantum SDK 23.10, Python 3.8, LZ4 compression.
+\textbf{Software}: Ubuntu 20.04 (JetPack 5.1), CUDA 11.4, cuQuantum Python 23.3.0, cuStateVec 1.9.0, Python 3.8. These specific versions were selected due to the hardware-software compatibility matrix of the Orin Nano platform.
 
 \textbf{Benchmark Circuits} (following ScaleQsim):
 \begin{itemize}
