Paper: Added Heterogeneous Compression Strategy details to Design section

--- a/paper/3_Design.tex
+++ b/paper/3_Design.tex
@@ -35,7 +35,7 @@ To overcome the high latency of edge storage media (e.g., SD cards or NVMe SSDs)
 3) \textit{Write-back Stage}: Concurrently, a separate write thread pool commits the processed previous chunk ($Chunk_{i-1}$) back to storage. 
 This pipelined approach ensures that the high latency of storage I/O is effectively hidden behind the computation time. The system utilizes multiple managed memory buffers (e.g., Buffer A and Buffer B) to toggle between prefetching and computation, maintaining continuous GPU utilization.
 
-\noindent\textbf{I/O-Computation Overlap.} A key design feature of \EdgeQuantum is the maximization of overlap between I/O and computation. While the GPU computes the amplitudes for the current chunk, the CPU resources are dedicated to decompressing the next chunk and compressing the previous result. By offloading these compression tasks to the multi-core CPU of the edge device, \EdgeQuantum balances the load across heterogeneous processors. The synchronization between stages is handled via thread futures, ensuring that the GPU never operates on invalid data and the CPU never overwrites a buffer currently in use by the GPU.
+\noindent\textbf{Heterogeneous Compression Strategy.} A key design feature of \EdgeQuantum is the maximization of overlap between I/O and computation through a heterogeneous compression strategy. While the GPU computes the amplitudes for the current chunk, the multi-core CPU resources are dedicated to asynchronously decompressing the next chunk and compressing the previous result using the LZ4 algorithm. We specifically opt for CPU-based compression over GPU-based alternatives (e.g., nvCOMP) for two critical reasons: (1) it ensures the GPU remains 100\% committed to \texttt{cuStateVec} operations without time-sharing resources for compression, and (2) it minimizes GPU memory bandwidth contention in the Unified Memory environment, where the CPU and GPU share the same physical RAM bus. By offloading these I/O-heavy tasks to the CPU, \EdgeQuantum achieves a balanced utilization of the SoC, effectively hiding the decompression latency behind the quantum simulation.
 
 \subsection{Gate Fusion Strategy}\label{3.3}
 
